--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,10 +1,6 @@
-body {
-    background-color: lightblue;
-    
-}
-.loginform {
-    max-width: 200px;
-    margin: auto;
-    padding: 20px;
-    width: 100%;
+* {
+    border: 0;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
