--- a/app/templates/loginpage.html
+++ b/app/templates/loginpage.html
@@ -22,18 +22,19 @@
                     <input type="password" id="password" name="password"  placeholder="password"required>
                 </div>
                 <button id="loginButton" type="submit" class = "button">Login</button>
+
+                 
+
             </form>
-            <p class="forgotpassword">
-                <a href = "/forgotpassword"> Forgot your password?</a>
-            </p>
+            
+            <button id="signupButton" class="button" onclick="location.href='/signup'">SignUp</button>
+
         </div>
         <div id = "login-image" class = "login-image">
             <img src = "/static/vecteezy.jpg" alt = "login image">
 
         </div>
 
-
-    <script src="script.js"></script>
 </div>
 </body>
 </html>
