--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -18,8 +18,8 @@
                     <input type="text" id="username" name="username" placeholder="User name" required>
                 </div>
                 <div class = "input">
-                    <label for "email"> Email:</label>
-                    <input type = "email" id = "email" name = "email" placeholder "Your email" required>
+                    <label for="email"> Email:</label>
+                    <input type = "email" id = "email" name = "email" placeholder ="Your email" required>
                 </div>
                 <div class="input">
                     <label for="password">Password:</label>
@@ -37,7 +37,6 @@
         </div>
 
 
-    <script src="script.js"></script>
 </div>
 </body>
 </html>
