--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -4,14 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Web App</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/signup.css">
+    <link rel="stylesheet" href="/static/navbar.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     
 </head>
 <body>
+    <nav class = "navbar">
+        
+            <li class = "navitem">
+                <a href = "#"></a> 
+            </li>
+            <div class = "middle">
+            <li class = "navitem">
+                <a href = "#">Home</a> 
+            </li>
+            <li class = "navitem">
+                <a href = "#"> Forums </a> 
+            </li> </div>
+            <div class = "right">
+            {% if session.user %}
+                <li class = "logout">
+                    <a class ="btn btn-default btn-sm" href = "{{ url_for('logoutuser')}}">
+                        <span class="glyphicon glyphicon-log-out"></span> Log out
+                    </a>
+            {% else %}
+                <li class = "navbutton">
+                    <a  class="btn btn-info btn-lg" href ="{{ url_for('login') }}">
+                        <span class="glyphicon glyphicon-log-in"> login </span></a>  
+                </li>
+                <li class = "navbutton2">
+                    <a  class="btn btn-info btn-lg" href ="{{ url_for('signup') }}">
+                        <span class="glyphicon glyphicon-circle-arrow-up"> signup </span></a> 
+                </li> </div>
+                
+            {% endif %}
+        
+    </nav>
+
     <div class = "container">
         <div id="loginPage" class= "loginPage">
-            <h2 id = "logintitle">Login</h2> 
+            <h2 id = "logintitle">Sign up!</h2> 
             <form id="loginForm" class="loginForm" action = "/signup" method = "POST">
                 <div class="input">
                     <label for="username">Username:</label>
