created some changes to main pages, and made a and made a start on the forums pages.

--- a/app/templates/loginpage.html
+++ b/app/templates/loginpage.html
@@ -26,6 +26,7 @@
                 </div>
                 <button id="loginButton" type="submit" class = "button">Login</button>
             </form>
+            
             <p class="forgotpassword">
                 <a href = "/forgotpassword"> Forgot your password?</a>
             </p>
@@ -36,7 +37,7 @@
         </div>
 
 
-    <script src="script.js"></script>
-</div>
+    </div>
+    <script src="/app/templates/login.js"></script>
 </body>
 </html>
