added universal style sheet

--- a/app/templates/HomePage.html
+++ b/app/templates/HomePage.html
@@ -33,7 +33,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Custom CSS -->
-    <!-- <link rel="stylesheet" href="/app/static/styles.css"> -->
+    <link rel="stylesheet" href="/app/static/styles.css">
     <link rel="stylesheet" href="/static/HomePage.css">
 
 </head>
@@ -42,7 +42,8 @@
         <div class="row justify-content-center">
             <div class="col-md-8 text-center">
                 <h1>Welcome to CommunityLikes</h1>
-                <p class="lead">CommunityLikes is the perfect place to connect with like-minded individuals who share your hobbies and interests. Join communities, interact with others, and share your thoughts, ideas, and experiences!</p>
+                <p class="lead">CommunityLikes is the perfect place to connect with like-minded individuals who share your hobbies 
+                    and interests. Join communities, interact with others, and share your thoughts, ideas, and experiences!</p>
                 <footer>
                     <a href="forums" class="btn btn-primary">Enter the Forums</a>
                     <a href="login" class="btn btn-primary">Login</a>
