Added a confirmation page for forgotpassword

--- a/app/templates/forgotpassword.html
+++ b/app/templates/forgotpassword.html
@@ -9,15 +9,15 @@
         <h1 class="forgot-password-heading">Forgot Password</h1>
     
         <form class="forgot-password-form" action="/reset-password" method="POST">
-            <label class="forgot-password-label" for="email">Email:</label>
-            <input class="forgot-password-input" type="email" id="email" name="email" required>
-        <br>
+            <div class="input-field">
+                <label class="forgot-password-label" for="email">Email:</label>
+                <input class="forgot-password-input" type="email" id="email" name="email" required>
+            </div>
             <input class="forgot-password-submit" type="submit" value="Reset Password">
     </form>
     
         <p class="forgot-password-text">Enter your email address and we'll send you a link to reset your password.</p>
     
-        <p class="forgot-password-text">If you don't receive an email, please check your spam folder.</p>
     </div>
 </body>
 </html>
