--- a/app/static/forgotpassword.css
+++ b/app/static/forgotpassword.css
@@ -36,8 +36,9 @@
 
 /* Submit button style */
 .forgot-password-submit {
-    width: 150px;
+    width: 300px;
     height: 40px;
+    margin-bottom: 20px;
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -49,4 +50,11 @@
 .forgot-password-error {
     color: red;
     margin-top: 10px;
+}
+/* Input field container style */
+.input-field {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 300px;
 }
