--- a/app/static/forgotpassword.css
+++ b/app/static/forgotpassword.css
@@ -35,8 +35,13 @@ body{
 
 /* Submit button style */
 .forgot-password-submit {
-    width: 100%;
-    padding: 10px 20px;
+    width: 300px;
+    height: 40px;
+    margin-bottom: 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
     border-radius:7px;
     background-color:white;
