--- a/app/templates/forgotpasswordresponse.html
+++ b/app/templates/forgotpasswordresponse.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Password Reset Requested</title>
-    <link rel="stylesheet" type="text/css" href="../static/forgotpassword.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/forgotpassword.css">
 </head>
 <body>
     <div class="forgot-password-container">
