--- a/app/templates/forgotpassword.html
+++ b/app/templates/forgotpassword.html
@@ -2,7 +2,11 @@
 <html>
 <head>
     <title>Forgot Password</title>
-    <link rel="stylesheet" type="text/css" href="../static/forgotpassword.css"></head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="../static/navbar.css">
+    <link rel="stylesheet" href="../static/forgotpassword.css">
+</head>
     
 <body>
     <div class="forgot-password-container">
