--- a/app/templates/forgotpassword.html
+++ b/app/templates/forgotpassword.html
@@ -3,12 +3,43 @@
 <head>
     <title>Forgot Password</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/forgotpassword.css">
     <link rel="stylesheet" href="../static/styles.css">
     <link rel="stylesheet" href="../static/navbar.css">
-    <link rel="stylesheet" href="../static/forgotpassword.css">
 </head>
     
 <body>
+    <nav class = "navbar">
+        
+        <li class = "navitem">
+            <a href = "#"></a> 
+        </li>
+        <div class = "middle">
+        <li class = "navitem">
+            <a href = "#">Home</a> 
+        </li>
+        <li class = "navitem">
+            <a href = "#"> Forums </a> 
+        </li> </div>
+        <div class = "right">
+        {% if session.user %}
+            <li class = "logout">
+                <a class ="btn btn-default btn-sm" href = "{{ url_for('logoutuser')}}">
+                    <span class="glyphicon glyphicon-log-out"></span> Log out
+                </a>
+        {% else %}
+            <li class = "navbutton">
+                <a  class="btn btn-info btn-lg" href ="{{ url_for('login') }}">
+                    <span class="glyphicon glyphicon-log-in"> login </span></a>  
+            </li>
+            <li class = "navbutton2">
+                <a  class="btn btn-info btn-lg" href ="{{ url_for('signup') }}">
+                    <span class="glyphicon glyphicon-circle-arrow-up"> signup </span></a> 
+            </li> </div>
+            
+        {% endif %}
+    
+    </nav>
     <div class="forgot-password-container">
         <h1 class="forgot-password-heading">Forgot Password</h1>
     
