--- a/app/templates/HomePage.html
+++ b/app/templates/HomePage.html
@@ -33,8 +33,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../static/styles.css">
-    <link rel="stylesheet" href="../static/HomePage.css">
+    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/HomePage.css">
 
 </head>
 <body>
