updated directory reference

--- a/app/templates/forgotpasswordresponse.html
+++ b/app/templates/forgotpasswordresponse.html
@@ -3,9 +3,9 @@
 <head>
     <title>Password Reset Requested</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/forgotpassword.css">
-    <link rel="stylesheet" href="../static/styles.css">
-    <link rel="stylesheet" href="../static/navbar.css">
+    <link rel="stylesheet" href="/static/forgotpassword.css">
+    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/navbar.css">
 </head>
 <body>
     <nav class = "navbar">
