--- a/app/templates/forgotpassword.html
+++ b/app/templates/forgotpassword.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Forgot Password</title>
-    <link rel="stylesheet" type="text/css" href="../static/forgotpassword.css"></head>
+    <link rel="stylesheet" type="text/css" href="/static/forgotpassword.css"></head>
     
 <body>
     <div class="forgot-password-container">
