Style update for forgotpassword

--- a/app/static/forgotpassword.css
+++ b/app/static/forgotpassword.css
@@ -5,7 +5,13 @@
     border: 0;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+    background-image: url(v.jpg);
+    background-size: cover; /* This property ensures that the image covers the entire background */
+    background-repeat: no-repeat; /* This property prevents the image from repeating */ 
 }
 
 /* Container for the forgot password form */
@@ -19,31 +25,25 @@
 
 /* Heading style */
 .forgot-password-heading {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 40px;
     margin-bottom: 20px;
-}
-
-/* Input field style */
-.forgot-password-input {
-    width: 300px;
-    height: 40px;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
 }
 
 /* Submit button style */
 .forgot-password-submit {
-    width: 300px;
-    height: 40px;
-    margin-bottom: 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
+    width: 100%;
+    padding: 10px 20px;
     cursor: pointer;
+    border-radius:7px;
+    background-color:white;
+    color: black;
+    font-size: 17px;
+    margin-top: 20px;
+}
+
+.forgot-password-submit:hover {
+    background-color: blue;
+    color: white;
 }
 
 /* Error message style */
@@ -57,4 +57,31 @@
     flex-direction: column;
     align-items: flex-start;
     width: 300px;
+}
+
+.forgot-password-label {
+    font-size: 14px;
+    color: black;
+    margin-bottom: 10px;
+    display: block;
+    font-weight: bold;
+}
+
+.forgot-password-input {
+    font-size: 14px;
+    color: black;
+    padding: 20px 45px 20px 20px;
+    width: 100%;
+    height: 100%;
+    background: white;
+    border: none;
+    outline: none;
+    border: 2px solid black;
+    border-radius: 40px;
+}
+
+.forgot-password-text {
+    font-size: 14px;
+    color: black;
+    margin-top: 20px;
 }
