--- a/app/static/forgotpassword.css
+++ b/app/static/forgotpassword.css
@@ -35,13 +35,8 @@ body{
 
 /* Submit button style */
 .forgot-password-submit {
-    width: 300px;
-    height: 40px;
-    margin-bottom: 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
+    width: 100%;
+    padding: 10px 20px;
     cursor: pointer;
     border-radius:7px;
     background-color:white;
@@ -65,7 +60,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 500px;
+    width: 300px;
 }
 
 .forgot-password-label {
@@ -81,7 +76,7 @@ body{
     color: black;
     padding: 20px 45px 20px 20px;
     width: 100%;
-    height: 7vh;
+    height: 100%;
     background: white;
     border: none;
     outline: none;
