--- a/app/static/forgotpassword.css
+++ b/app/static/forgotpassword.css
@@ -19,8 +19,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    height: 90vh;
+    width: 40%; /* Adjust this to change the width of the column */
+    margin: 0 auto; /* This will center the column */
+    margin-top: 60px; /* Adjust this to move the text under the nav bar */
+    background-color:  #f0f2f5;
+    padding-top: 50px;
 }
 
 /* Heading style */
