Matched style of signup

--- a/app/templates/forgotpassword.html
+++ b/app/templates/forgotpassword.html
@@ -51,7 +51,7 @@
         <form class="forgot-password-form" action="/reset-password" method="POST">
             <div class="input-field">
                 <label class="forgot-password-label" for="email">Email:</label>
-                <input class="forgot-password-input" type="email" id="email" name="email" required>
+                <input class="forgot-password-input" type="email" id="email" name="email" placeholder="Email">
             </div>
             <input class="forgot-password-submit" type="submit" value="Reset Password">
     </form>
