--- a/app/static/forgotpassword.css
+++ b/app/static/forgotpassword.css
@@ -60,7 +60,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 300px;
+    width: 500px;
 }
 
 .forgot-password-label {
@@ -76,7 +76,7 @@ body{
     color: black;
     padding: 20px 45px 20px 20px;
     width: 100%;
-    height: 100%;
+    height: 7vh;
     background: white;
     border: none;
     outline: none;
