--- a/app/templates/loginpage.html
+++ b/app/templates/loginpage.html
@@ -27,9 +27,15 @@
                 <button id="loginButton" type="submit" class = "button">Login</button>
             </form>
             
-            <p class="forgotpassword">
-                <a href = "/forgotpassword"> Forgot your password?</a>
-            </p>
+            <div class="otherLinks">
+                <p class="forgotpassword">
+                    <a href = "/forgotpassword"> Forgot your password?</a>
+                </p>
+                <span> or </span>
+                <p class="noAccount"> 
+                    <a href= "/signup"> Don't have an account?</a>
+                </p>
+            </div>
         </div>
 
     </div>
