fixed routing issues and linked navbars properly and link to forums now fixed for all nav bars and from home page

--- a/app/templates/HomePage.html
+++ b/app/templates/HomePage.html
@@ -19,7 +19,7 @@
                 <p class="lead">CommunityLikes is the perfect place to connect with like-minded individuals who share your hobbies 
                     and interests. Join communities, interact with others, and share your thoughts, ideas, and experiences!</p>
                 <footer>
-                    <a href="forums" class="btn btn-primary">Enter the Forums</a>
+                    <a href="Forums" class="btn btn-primary">Enter the Forums</a>
                     <a href="login" class="btn btn-primary">Login</a>
                     <a href="signup" class="btn btn-primary">Sign up</a>
                 </footer>
