--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -18,9 +18,9 @@
             <span>Go to:</span>
             <ul class="navbar-middle">
                 <li class="navitem">
-                    <a href="#">Home</a>
+                    <a href="HomePage">Home</a>
                 </li>
-                <li class="navitem">
+                <li class="Forums">
                     <a href="#">Forums</a>
                 </li>
             </ul>
