fixed routing issues and linked navbars properly and link to forums now fixed for all nav bars and from home page

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -20,10 +20,10 @@
             </li>
             <div class = "middle">
             <li class = "navitem">
-                <a href = "#">Home</a> 
+                <a href = "HomePage">Home</a> 
             </li>
             <li class = "navitem">
-                <a href = "#"> Forums </a> 
+                <a href = "Forums"> Forums </a> 
             </li> </div>
             <div class = "right">
             {% if session.user %}
