small syntax error for </head> fixed

--- a/app/templates/forum.html
+++ b/app/templates/forum.html
@@ -9,9 +9,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/forum.css">
-    <link rel="stylesheet" href="/static/navbar.css"
+    <link rel="stylesheet" href="/static/navbar.css">
 
 </head>
+
 <body>
     <nav class = "navbar">
         <div class="navbar-left">
