--- a/app/templates/loginpage.html
+++ b/app/templates/loginpage.html
@@ -39,6 +39,6 @@
         </div>
 
     </div>
-    <script src="/app/templates/login.js"></script>
+    <script src="/static/login.js"></script>
 </body>
 </html>
