--- a/app/templates/loginpage.html
+++ b/app/templates/loginpage.html
@@ -15,7 +15,7 @@
     <div class = "container">
         <div id="loginPage" class= "loginPage">
             <h2 id = "logintitle">Login</h2> 
-            <form id="loginForm" class="loginForm">
+            <form id="loginForm" class="loginForm" method="POST" action="{{ url_for('login') }}">
                 <div class="input">
                     <label for="username">Username:</label>
                     <input type="text" id="username" name="username" placeholder="User name / Email" required>
