--- a/app/templates/loginpage.html
+++ b/app/templates/loginpage.html
@@ -13,9 +13,16 @@
 <body>
    
     <div class = "container">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages%}
+                    <p> {{message}} </p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <div id="loginPage" class= "loginPage">
             <h2 id = "logintitle">Login</h2> 
-            <form id="loginForm" class="loginForm" method="POST" action="{{ url_for('login') }}>
+            <form id="loginForm" class="loginForm" method="POST" action="{{ url_for('login') }}">
                 <div class="input">
                     <label for="username">Username:</label>
                     <input type="text" id="username" name="username" placeholder="User name / Email" required>
