Updated Forgotpassword styling to reflect signup

--- a/app/static/forgotpassword.css
+++ b/app/static/forgotpassword.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    background-image: url(v.jpg);
+    background-image: url(defaultbg.jpg);
     background-size: cover; /* This property ensures that the image covers the entire background */
     background-repeat: no-repeat; /* This property prevents the image from repeating */ 
 }
@@ -19,12 +19,13 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 90vh;
+    height: 40vh;
     width: 40%; /* Adjust this to change the width of the column */
     margin: 0 auto; /* This will center the column */
     margin-top: 60px; /* Adjust this to move the text under the nav bar */
     background-color:  #f0f2f5;
     padding-top: 50px;
+    border-radius: 20px;
 }
 
 /* Heading style */
