--- a/app/templates/forgotpasswordresponse.html
+++ b/app/templates/forgotpasswordresponse.html
@@ -10,37 +10,38 @@
     <link rel="stylesheet" href="/static/navbar.css">
 </head>
 <body>
-    <nav class = "navbar">
-        
-        <li class = "navitem">
-            <a href = "#"></a> 
-        </li>
-        <div class = "middle">
-        <li class = "navitem">
-            <a href = "HomePage">Home</a> 
-        </li>
-        <li class = "navitem">
-            <a href = "Forums"> Forums </a> 
-        </li> </div>
-        <div class = "right">
-        {% if session.user %}
-            <li class = "logout">
-                <a class ="btn btn-default btn-sm" href = "{{ url_for('logoutuser')}}">
-                    <span class="glyphicon glyphicon-log-out"></span> Log out
-                </a>
-        {% else %}
-            <li class = "navbutton">
-                <a  class="btn btn-info btn-lg" href ="{{ url_for('login') }}">
-                    <span class="glyphicon glyphicon-log-in"> login </span></a>  
-            </li>
-            <li class = "navbutton2">
-                <a  class="btn btn-info btn-lg" href ="{{ url_for('signup') }}">
-                    <span class="glyphicon glyphicon-circle-arrow-up"> signup </span></a> 
-            </li> </div>
-            
-        {% endif %}
-    
+    <nav class="navbar">
+        <div class="navbar-left">
+            <span>Go to:</span>
+            <ul class="navbar-middle">
+                <li class="navitem">
+                    <a href="HomePage">Home</a>
+                </li>
+                <li class="Forums">
+                    <a href="#">Forums</a>
+                </li>
+            </ul>
+        </div>
+        <div class="navbar-right">
+            {% if session.user %}
+                <li class="logout">
+                    <a class="btn btn-default btn-sm" href="{{ url_for('logout')}}">
+                        <span class="glyphicon glyphicon-log-out"></span> Log out
+                    </a>
+                </li>
+            {% else %}
+                <li class="navbutton">
+                    <a class="btn btn-default btn-sm" href="{{ url_for('login') }}">
+                        <span class="glyphicon glyphicon-log-in"> login </span></a>  
+                </li>
+                <li class="navbutton2">
+                    <a class="btn btn-default btn-sm" href="{{ url_for('signup') }}">
+                        <span class="glyphicon glyphicon-circle-arrow-up"> signup </span></a> 
+                </li>
+            {% endif %}
+        </div>
     </nav>
+    
     <div class="forgot-password-container">
         <h1 class="forgot-password-heading">Password Reset Requested</h1>
         
