Added urls for Forum page

--- a/app/templates/forgotpasswordresponse.html
+++ b/app/templates/forgotpasswordresponse.html
@@ -18,7 +18,7 @@
                     <a href="HomePage">Home</a>
                 </li>
                 <li class="Forums">
-                    <a href="#">Forums</a>
+                    <a href="{{ url_for('forums') }}">Forums</a>
                 </li>
             </ul>
         </div>
@@ -41,7 +41,7 @@
             {% endif %}
         </div>
     </nav>
-    
+
     <div class="forgot-password-container">
         <h1 class="forgot-password-heading">Password Reset Requested</h1>
         
