--- a/app/templates/forum.html
+++ b/app/templates/forum.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class = "navbar">
+    <nav class="navbar">
         <div class="navbar-left">
             <span>Go to:</span>
             <ul class="navbar-middle">
@@ -22,29 +22,28 @@
                     <a href="HomePage">Home</a>
                 </li>
                 <li class="Forums">
-                    <a href="#">Forums</a>
+                    <a href="{{ url_for('forums') }}">Forums</a>
                 </li>
             </ul>
         </div>
         <div class="navbar-right">
             {% if session.user %}
                 <li class="logout">
-                    <a class="btn btn-default btn-sm" href="{{ url_for('logoutuser')}}">
+                    <a class="btn btn-default btn-sm" href="{{ url_for('logout')}}">
                         <span class="glyphicon glyphicon-log-out"></span> Log out
                     </a>
                 </li>
             {% else %}
                 <li class="navbutton">
-                    <a class="btn btn-info btn-lg" href="{{ url_for('login') }}">
+                    <a class="btn btn-default btn-sm" href="{{ url_for('login') }}">
                         <span class="glyphicon glyphicon-log-in"> login </span></a>  
                 </li>
                 <li class="navbutton2">
-                    <a class="btn btn-info btn-lg" href="{{ url_for('signup') }}">
+                    <a class="btn btn-default btn-sm" href="{{ url_for('signup') }}">
                         <span class="glyphicon glyphicon-circle-arrow-up"> signup </span></a> 
                 </li>
             {% endif %}
         </div>
-    
     </nav>
 
     <div class="forum-container">
