updated routes and html pages with new function names

--- a/app/templates/forgotpassword.html
+++ b/app/templates/forgotpassword.html
@@ -22,7 +22,7 @@
                     <a href="HomePage">Home</a>
                 </li>
                 <li class="Forums">
-                    <a href="{{ url_for('forums') }}">Forums</a>
+                    <a href="{{ url_for('Forums') }}">Forums</a>
                 </li>
             </ul>
         </div>
@@ -48,7 +48,7 @@
     <div class="forgot-password-container">
         <h1 class="forgot-password-heading">Forgot Password</h1>
     
-        <form class="forgot-password-form" action="{{ url_for('forgotpasswordresponse') }}" method="POST">
+        <form class="forgot-password-form" action="{{ url_for('reset') }}" method="POST">
             <div class="input-field">
                 <label class="forgot-password-label" for="email">Email:</label>
                 <input class="forgot-password-input" type="email" id="email" name="email" placeholder="Email">
