--- a/app/templates/forgotpasswordresponse.html
+++ b/app/templates/forgotpasswordresponse.html
@@ -18,7 +18,7 @@
                     <a href="HomePage">Home</a>
                 </li>
                 <li class="Forums">
-                    <a href="{{ url_for('forums') }}">Forums</a>
+                    <a href="{{ url_for('Forums') }}">Forums</a>
                 </li>
             </ul>
         </div>
